--- a/client/main.css
+++ b/client/main.css
@@ -2,3 +2,23 @@ body {
   padding: 10px;
   font-family: sans-serif;
 }
+
+.profHeight {
+  height: 250px;
+}
+
+.addFormBorder {
+  border: 1px solid #ced4da;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+  flex: 1 1 auto;
+  display: block;
+}
+
+.w-50 {
+  width: 50%;
+}
+
+.w-70 {
+  width: 70%;
+}
